fixed bug due to fact that file names are case insensitive

--- a/07_process.ipynb
+++ b/07_process.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,12 +1349,184 @@
     "    # ROUNDING: TO 4 DECIMALS, TURNOVER TO INT\n",
     "    all_adjusted = round(all_adjusted, 4)\n",
     "    all_adjusted['turnover'] = all_adjusted['turnover'].astype(int)\n",
+    "    \n",
     "\n",
     "    if (all_adjusted['close'] < 0).any():\n",
     "        print(f'{id} has negative prices!')\n",
     "        #raise Exception(f'{id} has negative prices!')\n",
     "    \n",
     "    all_adjusted.to_parquet(DATA_PATH + f\"processed/m1/{id}.parquet\", engine=\"fastparquet\", row_group_offsets=25000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bars = bars.sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-10-19 09:30:00</th>\n",
+       "      <td>6.0300</td>\n",
+       "      <td>6.0300</td>\n",
+       "      <td>6.03</td>\n",
+       "      <td>6.03</td>\n",
+       "      <td>870</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-19 09:31:00</th>\n",
+       "      <td>6.0300</td>\n",
+       "      <td>6.0300</td>\n",
+       "      <td>6.03</td>\n",
+       "      <td>6.03</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-19 09:35:00</th>\n",
+       "      <td>6.0800</td>\n",
+       "      <td>6.0800</td>\n",
+       "      <td>6.07</td>\n",
+       "      <td>6.08</td>\n",
+       "      <td>1207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-19 09:37:00</th>\n",
+       "      <td>6.0600</td>\n",
+       "      <td>6.0600</td>\n",
+       "      <td>6.05</td>\n",
+       "      <td>6.05</td>\n",
+       "      <td>774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-19 09:41:00</th>\n",
+       "      <td>6.0200</td>\n",
+       "      <td>6.0200</td>\n",
+       "      <td>6.01</td>\n",
+       "      <td>6.01</td>\n",
+       "      <td>608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-19 15:50:00</th>\n",
+       "      <td>16.9959</td>\n",
+       "      <td>16.9959</td>\n",
+       "      <td>16.96</td>\n",
+       "      <td>16.96</td>\n",
+       "      <td>1532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-19 15:53:00</th>\n",
+       "      <td>16.9600</td>\n",
+       "      <td>16.9600</td>\n",
+       "      <td>16.96</td>\n",
+       "      <td>16.96</td>\n",
+       "      <td>510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-19 15:57:00</th>\n",
+       "      <td>16.9800</td>\n",
+       "      <td>17.0000</td>\n",
+       "      <td>16.98</td>\n",
+       "      <td>17.00</td>\n",
+       "      <td>365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-19 15:58:00</th>\n",
+       "      <td>16.9800</td>\n",
+       "      <td>17.0200</td>\n",
+       "      <td>16.98</td>\n",
+       "      <td>17.02</td>\n",
+       "      <td>4743</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-19 15:59:00</th>\n",
+       "      <td>17.0012</td>\n",
+       "      <td>17.0300</td>\n",
+       "      <td>16.97</td>\n",
+       "      <td>16.97</td>\n",
+       "      <td>7230</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>400 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        open     high    low  close  volume\n",
+       "datetime                                                   \n",
+       "2022-10-19 09:30:00   6.0300   6.0300   6.03   6.03     870\n",
+       "2022-10-19 09:31:00   6.0300   6.0300   6.03   6.03     101\n",
+       "2022-10-19 09:35:00   6.0800   6.0800   6.07   6.08    1207\n",
+       "2022-10-19 09:37:00   6.0600   6.0600   6.05   6.05     774\n",
+       "2022-10-19 09:41:00   6.0200   6.0200   6.01   6.01     608\n",
+       "...                      ...      ...    ...    ...     ...\n",
+       "2022-10-19 15:50:00  16.9959  16.9959  16.96  16.96    1532\n",
+       "2022-10-19 15:53:00  16.9600  16.9600  16.96  16.96     510\n",
+       "2022-10-19 15:57:00  16.9800  17.0000  16.98  17.00     365\n",
+       "2022-10-19 15:58:00  16.9800  17.0200  16.98  17.02    4743\n",
+       "2022-10-19 15:59:00  17.0012  17.0300  16.97  16.97    7230\n",
+       "\n",
+       "[400 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bars.loc[bars.index.date == date(2022, 10, 19)]"
    ]
   },
   {
