--- a/08_renamings.ipynb
+++ b/08_renamings.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4485\n"
+      "4491\n"
      ]
     },
     {
@@ -108,7 +108,7 @@
        "4013  2022-06-09   FB  META"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,14 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1010\n"
+      "1007\n"
      ]
     },
     {
@@ -347,7 +347,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9439</th>\n",
+       "      <th>9369</th>\n",
        "      <td>META-2022-06-09</td>\n",
        "      <td>META</td>\n",
        "      <td>{'2022-06-09': 'FB'}</td>\n",
@@ -367,16 +367,16 @@
       ],
       "text/plain": [
        "                   ID ticker           tickers_old  \\\n",
-       "9439  META-2022-06-09   META  {'2022-06-09': 'FB'}   \n",
+       "9369  META-2022-06-09   META  {'2022-06-09': 'FB'}   \n",
        "\n",
        "                                           name  active  start_date  \\\n",
-       "9439  Meta Platforms, Inc. Class A Common Stock    True  2012-05-18   \n",
+       "9369  Meta Platforms, Inc. Class A Common Stock    True  2012-05-18   \n",
        "\n",
        "        end_date  start_data    end_data type        cik composite_figi  \n",
-       "9439  2024-04-19  2012-05-18  2024-04-19   CS  1326801.0   BBG000MM2P62  "
+       "9369  2024-04-19  2012-05-18  2024-04-19   CS  1326801.0   BBG000MM2P62  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25\n"
+      "0\n"
      ]
     },
     {
@@ -443,61 +443,23 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>ACNT-2022-08-11</td>\n",
-       "      <td>ACNT</td>\n",
-       "      <td>{'2022-08-11': 'SYNL', '2003-10-06': 'SYNC'}</td>\n",
-       "      <td>Ascent Industries Co. Common Stock</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2003-09-10</td>\n",
-       "      <td>2024-04-19</td>\n",
-       "      <td>2003-09-10</td>\n",
-       "      <td>2024-04-18</td>\n",
-       "      <td>CS</td>\n",
-       "      <td>95953.0</td>\n",
-       "      <td>BBG000CLRHW7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>442</th>\n",
-       "      <td>AGN-2015-06-15</td>\n",
-       "      <td>AGN</td>\n",
-       "      <td>{'2015-06-15': 'ACT', '2013-01-24': 'WPI'}</td>\n",
-       "      <td>Allergan plc</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2003-09-10</td>\n",
-       "      <td>2020-05-08</td>\n",
-       "      <td>2003-09-10</td>\n",
-       "      <td>2020-05-08</td>\n",
-       "      <td>CS</td>\n",
-       "      <td>1578845.0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  ID ticker                                   tickers_old  \\\n",
-       "200  ACNT-2022-08-11   ACNT  {'2022-08-11': 'SYNL', '2003-10-06': 'SYNC'}   \n",
-       "442   AGN-2015-06-15    AGN    {'2015-06-15': 'ACT', '2013-01-24': 'WPI'}   \n",
-       "\n",
-       "                                   name  active  start_date    end_date  \\\n",
-       "200  Ascent Industries Co. Common Stock    True  2003-09-10  2024-04-19   \n",
-       "442                        Allergan plc   False  2003-09-10  2020-05-08   \n",
-       "\n",
-       "     start_data    end_data type        cik composite_figi  \n",
-       "200  2003-09-10  2024-04-18   CS    95953.0   BBG000CLRHW7  \n",
-       "442  2003-09-10  2020-05-08   CS  1578845.0                 "
+       "Empty DataFrame\n",
+       "Columns: [ID, ticker, tickers_old, name, active, start_date, end_date, start_data, end_data, type, cik, composite_figi]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "multiple_renamings = tickers_v5[tickers_v5[\"tickers_old\"].str.len() > 30]\n",
+    "multiple_renamings = tickers_v5[tickers_v5[\"tickers_old\"].str.len() > 23]\n",
     "print(len(multiple_renamings))\n",
     "multiple_renamings.head(2)"
    ]
