--- a/11_screeners.ipynb
+++ b/11_screeners.ipynb
@@ -29,8 +29,8 @@
     "\n",
     "DATA_PATH = \"../data/polygon/\"\n",
     "\n",
-    "START_DATE = date(2019, 6, 1)\n",
-    "END_DATE = date(2024, 3, 1)"
+    "START_DATE = date(2003, 10, 1)\n",
+    "END_DATE = date(2024, 4, 1)"
    ]
   },
   {
@@ -38,6 +38,9 @@
    "metadata": {},
    "source": [
     "**Top liquid stocks**\n",
+    "\n",
+    "(I now use fundamentals instead)\n",
+    "\n",
     "In backtesting, instead of screening all stocks, for most systems I only need e.g. the S&P500 stocks. However I don't care about the exact holdings of the S&P500. The only reason why I would choose the index is because of volume and liquidity. However then turnover is way more informative.\n",
     "\n",
     "So to create the T100, T500, T1500 and T3000 indices, I simply select the stocks with the highest turnover in each 6-month period."
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,65 +157,13 @@
     "\n",
     "    for day in big_drop.index:\n",
     "        dates_and_IDs[day.isoformat()].append(id)\n",
-    "    print(index)\n",
+    "        \n",
+    "    if index % 50 == 0:\n",
+    "        print(index)\n",
     "        \n",
     "# Store to json\n",
     "with open('../output/screens/INTRADAY_MINUS_20PCT.json', 'w') as f: \n",
     "    json.dump(dates_and_IDs, f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Top pre-market gappers at market open**\n",
-    "* Pre-market gap at least 30% (that is, premarket open to 9:30 AM)\n",
-    "* Pre-market turnover at least $1M\n",
-    "* Unadjusted price at least $1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tickers = get_tickers()\n",
-    "# tickers = tickers[tickers['type'].isin(['CS', 'ADRC'])]\n",
-    "\n",
-    "# # Get list of market dates within our range\n",
-    "# dates = get_market_dates(START_DATE, END_DATE)\n",
-    "# dates_and_IDs = {day.isoformat(): list() for day in dates} # Create dictionary with empty lists\n",
-    "\n",
-    "# for index, row in tickers.iterrows():\n",
-    "#     id = row['ID']\n",
-    "\n",
-    "#     m1 = get_data(id, START_DATE, END_DATE, timeframe=5, extended_hours=True, \\\n",
-    "#                   columns=['open', 'close', 'turnover', 'close_original'])\n",
-    "\n",
-    "#     if m1.empty:\n",
-    "#         continue\n",
-    "\n",
-    "#     # Calculate variables needed in pre-market\n",
-    "#     m1 = m1.between_time('4:00', '9:29')\n",
-    "#     m1.index = m1.index.date\n",
-    "#     m1 = m1.groupby(m1.index).agg({\"open\": \"first\", \n",
-    "#                                    \"close\": \"last\", \n",
-    "#                                    \"close_original\": \"last\", \n",
-    "#                                    \"turnover\": \"sum\"})\n",
-    "    \n",
-    "#     m1['gap'] = (m1['close']/m1['open'] - 1)*100 # Base 100\n",
-    "    \n",
-    "#     big_gap = m1[(m1['gap'] >= 30) \\\n",
-    "#                & (m1['close_original'] >= 1.00)\\\n",
-    "#                & (m1['turnover'] >= 1e6)]\n",
-    "    \n",
-    "#     for day in big_gap.index:\n",
-    "#         dates_and_IDs[day.isoformat()].append(id)\n",
-    "    \n",
-    "# # # Store to json\n",
-    "# with open('../output/screens/PREMKT_GAP_30PCT.json', 'w') as f: \n",
-    "#     json.dump(dates_and_IDs, f)"
    ]
   },
   {
@@ -227,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,6 +221,9 @@
     "    \n",
     "    for day in big_gap.index:\n",
     "        dates_and_IDs[day.isoformat()].append(id)\n",
+    "        \n",
+    "    if index % 50 == 0:\n",
+    "        print(index)\n",
     "\n",
     "# # Store to json\n",
     "with open('../output/screens/GAP_30PCT.json', 'w') as f: \n",
