--- a/13_fundamentals_sharadar.ipynb
+++ b/13_fundamentals_sharadar.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,14 @@
    "outputs": [],
    "source": [
     "fundamentals = pd.read_parquet('../data/other/sharadar_SF1.parquet')\n",
-    "fundamentals['datekey'] = pd.to_datetime(fundamentals['datekey']).dt.date\n",
-    "sharadar_tickers = pd.read_csv('../data/other/sharadar_tickers.csv', index_col=0)"
+    "fundamentals['datekey'] = pd.to_datetime(fundamentals['datekey']).dt.date\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create ticker mapping based on cik"
    ]
   },
   {
@@ -105,6 +111,7 @@
     }
    ],
    "source": [
+    "sharadar_tickers = pd.read_csv('../data/other/sharadar_tickers.csv', index_col=0)\n",
     "ticker_cik_map = sharadar_tickers[['ticker', 'cik']]\n",
     "ticker_cik_map.head(3)"
    ]
