--- a/14_index_holdings.ipynb
+++ b/14_index_holdings.ipynb
@@ -5,19 +5,20 @@
    "metadata": {},
    "source": [
     "# Index constituents\n",
+    "(not everything is up-to-date, we use the Sharadar SF1 database)\n",
+    "\n",
     "Sometimes (especially for long strategies), I want to limit my focus to the largest X stocks. The high-market-cap stocks are less likely to be manipulated, more liquid and actually profitable companies. However I don't care what is exactly in the S&P500. I care only about marketcap and liquidity. So I also don't need a day-by-day update. Quarterly is fine.\n",
     "\n",
     "The goal is to create a list of stocks of the largest N market caps. However we will apply more rules:\n",
     "\n",
     "* Must have market cap\n",
     "* Must have a SIC code\n",
-    "* Must be headquartered in the US\n",
-    "* Must have original price above $1"
+    "* Must be headquartered in the US"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +34,8 @@
     "\n",
     "DATA_PATH = \"../data/polygon/\"\n",
     "\n",
-    "START_DATE = date(2019, 8, 1) # MUST BE 1st of FEB, MAY, AUG or NOV\n",
-    "END_DATE = date(2024, 3, 1)\n",
+    "START_DATE =date(2003, 11, 1) # MUST BE 1st of FEB, MAY, AUG or NOV\n",
+    "END_DATE = date(2023, 8, 1)\n",
     "\n",
     "with open(DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
@@ -51,22 +52,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 3000\n",
+    "N = 1500\n",
     "\n",
-    "market_cap = pd.read_csv(DATA_PATH + 'processed/fundamentals.csv', index_col=0)\n",
+    "market_cap = pd.read_csv('../data/other/sharadar_processed.csv')\n",
     "market_cap.date = pd.to_datetime(market_cap.date).dt.date\n",
-    "market_cap = market_cap[market_cap['type'] == 'CS'] # Filter out ADRs\n",
-    "market_cap = market_cap[~market_cap['sic_code'].isna()] # Filter out tickers with no SIC code\n",
+    "market_cap = market_cap[market_cap['country'] == 'US'] # Filter out ADRs\n",
+    "market_cap = market_cap[~market_cap['sic'].isna()] # Filter out tickers with no SIC code\n",
     "\n",
     "dates_and_IDs = {}\n",
     "\n",
     "for day in pd.date_range(START_DATE, END_DATE, freq='3MS').date:\n",
-    "    market_cap_day = market_cap[market_cap['date'] == day]\n",
-    "    market_cap_day_sorted = market_cap_day.sort_values(by='market_cap_M', ascending=False)\n",
+    "    market_cap_day = market_cap[(market_cap['date'] <= day) & (market_cap['date'] > day - timedelta(days=90))]\n",
+    "    market_cap_day = market_cap_day[~market_cap_day['ID'].duplicated(keep='last')]\n",
+    "    market_cap_day_sorted = market_cap_day.sort_values(by='marketcap_M', ascending=False)\n",
+    "\n",
     "    top_market_cap_tickers = market_cap_day_sorted['ID'].head(N).values.tolist()\n",
     "    dates_and_IDs[day.isoformat()] = top_market_cap_tickers\n",
     "\n",
@@ -83,17 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../output/universes/TOP_3000.json', 'r') as f: \n",
+    "with open('../output/universes/TOP_500.json', 'r') as f: \n",
     "    largest_stocks = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['AAPL-2019-06-03', 'MSFT-2019-06-03', 'GOOG-2019-06-03']"
+       "['AAPL-2003-09-10', 'MSFT-2003-09-10', 'GOOG-2004-08-19']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +146,7 @@
        "['MSFT', 'AAPL', 'NVDA', 'AMZN', 'META']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['MSFT', 'AAPL', 'GOOG', 'GOOGL', 'AMZN']"
+       "['AAPL', 'MSFT', 'GOOG', 'GOOGL', 'AMZN']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,42 +189,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tickers in our list that match R3000: 499\n",
-      "Tickers in R3000: 503\n"
+      "Tickers in our list that match SP500: 498\n",
+      "Tickers in SP500: 503\n"
      ]
     }
    ],
    "source": [
     "available = []\n",
-    "for index, row in get_tickers(5).iterrows():\n",
+    "for index, row in get_tickers(4).iterrows():\n",
     "    ticker = row['ID'][:-11]\n",
     "    if ticker in sp500:\n",
     "        available.append(ticker)\n",
     "\n",
     "difference = set(sp500).difference(set(available))\n",
-    "print(f'Tickers in our list that match R3000: {len(set(available))}')\n",
-    "print(f'Tickers in R3000: {len(sp500)}')"
+    "print(f'Tickers in our list that match SP500: {len(set(available))}')\n",
+    "print(f'Tickers in SP500: {len(sp500)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'CPAY', 'ETN', 'GEV', 'SOLV'}"
+       "{'C', 'CAT', 'ETN', 'IVZ', 'JPM'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,16 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "8"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,16 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ETN', 'GEV', 'CPAY', 'DAY', 'SOLV']"
+       "['JPM', 'CAT', 'ETN', 'C', 'GEV', 'CPAY', 'SOLV', 'IVZ']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,16 +311,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "86"
+       "90"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,29 +338,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "83"
+       "87"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(set(TOP_500).difference(set(sp500)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A difference of about 15%. This is to be expected, as the S&P500 has way more rules than just market cap."
    ]
   },
   {
@@ -372,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -390,14 +386,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tickers in our list that match R3000: 2672\n",
+      "Tickers in our list that match R3000: 2665\n",
       "Tickers in R3000: 2686\n"
      ]
     }
@@ -446,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +451,7 @@
        "2686"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,16 +489,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "339"
+       "379"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,16 +516,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "340"
+       "380"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,16 +571,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24"
+       "26"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,16 +606,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "5"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,16 +627,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ALTM', 'ARD', 'ASTH', 'BTSG', 'CGON', 'DAY', 'MTUS', 'PFC', 'PRKS', 'TBRG'}"
+       "{'ARD', 'CPAY', 'GEV', 'SOLV', 'TBRG'}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
